Proof of concept parallel source stream reading implementation for MySQL